tests/ui/ferrocene/compiler-arguments/upper_c_debuginfo/upper_c_debuginfo_eq-invalid.rs
//@ check-fail
//@ compile-flags: -Cdebuginfo=invalid
//~? ERROR incorrect value

fn main() {}

// ferrocene-annotations: um_rustc_C_debuginfo
